--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <nav></nav>
     </header>
     
-    <div class="custom-container">
+    <div class="container custom-container">
         <h2>Manage Your Auto Cartridge Replenishment Account</h2>
         <p>Eum ad pertinax evertitur, no est esse evertitur philosophia. Elit virtute omnesque no est, eu his cetero perfecto ocurreret. Soluta posidonium nec an, augue saperet ex pri. Putent invenire necessitatibus ius an, per in novum eripuit. Eum te quodsi vidisse theophrastus, sed no nullam nostrud. Eu gubergren concludaturque pro, ne dui</p>
         <ul>
@@ -38,10 +38,10 @@
             <br>
             <label for="partnerPassword">Password *</label>
             <input id="partnerPassword" name="partnerPassword" type="password" class="form-control">
-            <p class="text-right">
-                <a href="/" class="pad-hrz-med">Forgot password?</a>
+            <div class="button-ct">
+                <a href="/" class="forgot-link">Forgot password?</a>
                 <button id="formSubmit" class="cbtn cbtn-canon-red">Sign In</button>
-            </p>
+            </div> 
         </div>
 
     </div>
