modal and order history

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <title>Manage My Auto-Replenishment Printers</title>
+  <title>Sign In to ARS</title>
   <meta name="description" content="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   
@@ -38,19 +38,22 @@
             <br>
             <label for="partnerPassword">Password *</label>
             <input id="partnerPassword" name="partnerPassword" type="password" class="form-control">
+            <div class="error">
+                Either the email address or the passwiord is incorrect. 
+                Please enter the information again.
+            </div>
             <div class="button-ct">
                 <a href="/" class="forgot-link">Forgot password?</a>
                 <button id="formSubmit" class="cbtn cbtn-canon-red">Sign In</button>
             </div> 
         </div>
-
     </div>
     
-<footer>
-    <div class="foot-content">
-        &copy; Canon 2018
-    </div>
-</footer>
+    <footer>
+        <div class="foot-content">
+            &copy; Canon 2018
+        </div>
+    </footer>
 
 </body>
 </html>
