--- a/my-printers.html
+++ b/my-printers.html
@@ -12,6 +12,7 @@
   <!-- Canon CSS Assets -->
   <link rel="stylesheet" href="css/vendor-assets/bootstrap.css">
   <link rel="stylesheet" href="css/canon-assets/canon-styles.css">
+  <!-- <link rel="stylesheet" href="css/main.css"> -->
   <link rel="stylesheet" href="css/styles.css">
 
   <script src="js/canon.js"></script>
@@ -211,101 +212,166 @@
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col-sm-12">
-                        
-                        <div class="product-row">
-                            <div role="button" data-toggle="collapse"  href="#productOne">
-                                <div class="product-row__img">
-                                    <img src="/img/PG-240-XXL_1_xl.jpg">
-                                </div>
-                                <div class="product-row__more">
-                                        <button class="cbtn cbtnd cbtn-white fa fa-angle-down"></button>
+                <div class="full-table-data">
+                    <div class="row">
+                        <table>
+                            <thead>
+                                <tr>
+                                    <td>Order Number</td>
+                                    <td>Order Date</td>
+                                    <td>Status</td>
+                                    <td>Printer Model</td>
+                                    <td>Cartridge Name</td>
+                                    <td>Cartridge SKU</td>
+                                    <td>Qty</td>
+                                    <td>Total Price</td>
+                                    <td>Tracking Number</td>
+                                </tr>
+                            </thead>
+                            <tr>
+                                <td title="36428736487">36428736487</td>
+                                <td title="09-31-2018">09-31-2018</td>
+                                <td title="In Process">In Process</td>
+                                <td title="PIXMA TS9020">PIXMA TS9020</td>
+                                <td title="CLI-221 Black Ink Tank">CLI-221 Black Ink Tank</td>
+                                <td title="27857836">27857836</td>
+                                <td title="1">1</td>
+                                <td title="$15.99">$15.99</td>
+                                <td title="3897426862487628347">3897426862487628347</td>
+                            </tr>
+                            <tr>
+                                <td title="36428736487">36428736487</td>
+                                <td title="09-31-2018">09-31-2018</td>
+                                <td title="In Process">In Process</td>
+                                <td title="PIXMA TS9020">PIXMA TS9020</td>
+                                <td title="CLI-221 Black Ink Tank">CLI-221 Black Ink Tank</td>
+                                <td title="27857836">27857836</td>
+                                <td title="1">1</td>
+                                <td title="$15.99">$15.99</td>
+                                <td title="3897426862487628347">3897426862487628347</td>
+                            </tr>
+                            <tr>
+                                <td title="36428736487">36428736487</td>
+                                <td title="09-31-2018">09-31-2018</td>
+                                <td title="In Process">In Process</td>
+                                <td title="PIXMA TS9020">PIXMA TS9020</td>
+                                <td title="CLI-221 Black Ink Tank">CLI-221 Black Ink Tank</td>
+                                <td title="27857836">27857836</td>
+                                <td title="1">1</td>
+                                <td title="$15.99">$15.99</td>
+                                <td title="3897426862487628347">3897426862487628347</td>
+                            </tr>
+                            <tr>
+                                <td title="36428736487">36428736487</td>
+                                <td title="09-31-2018">09-31-2018</td>
+                                <td title="In Process">In Process</td>
+                                <td title="PIXMA TS9020">PIXMA TS9020</td>
+                                <td title="CLI-221 Black Ink Tank">CLI-221 Black Ink Tank</td>
+                                <td title="27857836">27857836</td>
+                                <td title="1">1</td>
+                                <td title="$15.99">$15.99</td>
+                                <td title="3897426862487628347">3897426862487628347</td>
+                            </tr>
+                        </table>
+                    </div>
+                </div>
+                <div class="mobile-table-data">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            
+                            <div class="product-row">
+                                <div role="button" data-toggle="collapse"  href="#productOne">
+                                    <div class="product-row__img">
+                                        <img src="/img/PG-240-XXL_1_xl.jpg">
                                     </div>
-                                <div class="product-row__specs">
-                                    <h1>PG-240-XXL</h1>
-                                    <p>Delivered June, 28, 2018</p>
-                                </div>
-                            </div>
-                            <div id="productOne" class="product-details collapse">
-                                <p>Tracking Number: <b><a href="https://m.usps.com/m/TrackConfirmAction" target="_new">39834453</a></b></p>
-                                <p>Order Number: <b>3642873</b></p>
-                                <p>Order Date: <b>09-31-2018</b></p>
-                                <p>Cartridge SKU: <b>1234567</b></p>
-                                <p>Qty: <b>1</b></p>
-                                <p>Total Price: <b>$14.99</b></p>
-                            </div>
-                        </div>
-
-                        <div class="product-row">
-                            <div role="button" data-toggle="collapse" href="#productTwo" class="product collapsed">
-                                <div class="product-row__img">
-                                    <img src="/img/toner-crg-051-front_1_l.jpg">
-                                </div>
-                                <div class="product-row__more">
-                                        <button class="cbtn cbtnd cbtn-white fa fa-angle-down"></button>
+                                    <div class="product-row__more">
+                                            <button class="cbtn cbtnd cbtn-white fa fa-angle-down"></button>
+                                        </div>
+                                    <div class="product-row__specs">
+                                        <h1>PG-240-XXL</h1>
+                                        <p>Delivered June, 28, 2018</p>
                                     </div>
-                                <div class="product-row__specs">
-                                    <h1>Toner CRG-051</h1>
-                                    <p>Delivered July, 16, 2018</p>
+                                </div>
+                                <div id="productOne" class="product-details collapse">
+                                    <p>Tracking Number: <b><a href="https://m.usps.com/m/TrackConfirmAction" target="_new">39834453</a></b></p>
+                                    <p>Order Number: <b>3642873</b></p>
+                                    <p>Order Date: <b>09-31-2018</b></p>
+                                    <p>Cartridge SKU: <b>1234567</b></p>
+                                    <p>Qty: <b>1</b></p>
+                                    <p>Total Price: <b>$14.99</b></p>
                                 </div>
                             </div>
-                            <div id="productTwo" class="product-details collapse">
-                                <p>Tracking Number: <b><a href="https://m.usps.com/m/TrackConfirmAction" target="_new">39834453</a></b></p>
-                                <p>Order Number: <b>3642873</b></p>
-                                <p>Order Date: <b>09-31-2018</b></p>
-                                <p>Cartridge SKU: <b>1234567</b></p>
-                                <p>Qty: <b>1</b></p>
-                                <p>Total Price: <b>$14.99</b></p>
-                            </div>
-                        </div>
 
-                        <div class="product-row">
-                            <div role="button" data-toggle="collapse"  href="#productThree">
-                                <div class="product-row__img">
-                                    <img src="/img/GI-290_Y_1_l.jpg">
-                                </div>
-                                <div class="product-row__more">
-                                        <button class="cbtn cbtnd cbtn-white fa fa-angle-down"></button>
+                            <div class="product-row">
+                                <div role="button" data-toggle="collapse" href="#productTwo" class="product collapsed">
+                                    <div class="product-row__img">
+                                        <img src="/img/toner-crg-051-front_1_l.jpg">
                                     </div>
-                                <div class="product-row__specs">
-                                    <h1>GI 290 Yellow</h1>
-                                    <p>Delivered July, 26, 2018</p>
-                                </div>
-                            </div>
-                            <div id="productThree" class="product-details collapse">
-                                <p>Tracking Number: <b><a href="https://m.usps.com/m/TrackConfirmAction" target="_new">39834453</a></b></p>
-                                <p>Order Number: <b>3642873</b></p>
-                                <p>Order Date: <b>09-31-2018</b></p>
-                                <p>Cartridge SKU: <b>1234567</b></p>
-                                <p>Qty: <b>1</b></p>
-                                <p>Total Price: <b>$14.99</b></p>
-                            </div>
-                        </div>
-
-                        <div class="product-row">
-                            <div role="button" data-toggle="collapse"  href="#productFour">
-                                <div class="product-row__img">
-                                    <img src="/img/25525_1_l.jpg">
-                                </div>
-                                <div class="product-row__more">
-                                        <button class="cbtn cbtnd cbtn-white fa fa-angle-down"></button>
+                                    <div class="product-row__more">
+                                            <button class="cbtn cbtnd cbtn-white fa fa-angle-down"></button>
+                                        </div>
+                                    <div class="product-row__specs">
+                                        <h1>Toner CRG-051</h1>
+                                        <p>Delivered July, 16, 2018</p>
                                     </div>
-                                <div class="product-row__specs">
-                                    <h1>Color Ink/Card Size Label KC-18IS & Paper Cassette PCC-CP400 Kit</h1>
-                                    <p>Delivered July, 26, 2018</p>
+                                </div>
+                                <div id="productTwo" class="product-details collapse">
+                                    <p>Tracking Number: <b><a href="https://m.usps.com/m/TrackConfirmAction" target="_new">39834453</a></b></p>
+                                    <p>Order Number: <b>3642873</b></p>
+                                    <p>Order Date: <b>09-31-2018</b></p>
+                                    <p>Cartridge SKU: <b>1234567</b></p>
+                                    <p>Qty: <b>1</b></p>
+                                    <p>Total Price: <b>$14.99</b></p>
                                 </div>
                             </div>
-                            <div id="productFour" class="product-details collapse">
-                                <p>Tracking Number: <b><a href="https://m.usps.com/m/TrackConfirmAction" target="_new">39834453</a></b></p>
-                                <p>Order Number: <b>3642873</b></p>
-                                <p>Order Date: <b>09-31-2018</b></p>
-                                <p>Cartridge SKU: <b>1234567</b></p>
-                                <p>Qty: <b>1</b></p>
-                                <p>Total Price: <b>$14.99</b></p>
-                            </div>
-                        </div>
 
+                            <div class="product-row">
+                                <div role="button" data-toggle="collapse"  href="#productThree">
+                                    <div class="product-row__img">
+                                        <img src="/img/GI-290_Y_1_l.jpg">
+                                    </div>
+                                    <div class="product-row__more">
+                                            <button class="cbtn cbtnd cbtn-white fa fa-angle-down"></button>
+                                        </div>
+                                    <div class="product-row__specs">
+                                        <h1>GI 290 Yellow</h1>
+                                        <p>Delivered July, 26, 2018</p>
+                                    </div>
+                                </div>
+                                <div id="productThree" class="product-details collapse">
+                                    <p>Tracking Number: <b><a href="https://m.usps.com/m/TrackConfirmAction" target="_new">39834453</a></b></p>
+                                    <p>Order Number: <b>3642873</b></p>
+                                    <p>Order Date: <b>09-31-2018</b></p>
+                                    <p>Cartridge SKU: <b>1234567</b></p>
+                                    <p>Qty: <b>1</b></p>
+                                    <p>Total Price: <b>$14.99</b></p>
+                                </div>
+                            </div>
+
+                            <div class="product-row">
+                                <div role="button" data-toggle="collapse"  href="#productFour">
+                                    <div class="product-row__img">
+                                        <img src="/img/25525_1_l.jpg">
+                                    </div>
+                                    <div class="product-row__more">
+                                            <button class="cbtn cbtnd cbtn-white fa fa-angle-down"></button>
+                                        </div>
+                                    <div class="product-row__specs">
+                                        <h1>Color Ink/Card Size Label KC-18IS & Paper Cassette PCC-CP400 Kit</h1>
+                                        <p>Delivered July, 26, 2018</p>
+                                    </div>
+                                </div>
+                                <div id="productFour" class="product-details collapse">
+                                    <p>Tracking Number: <b><a href="https://m.usps.com/m/TrackConfirmAction" target="_new">39834453</a></b></p>
+                                    <p>Order Number: <b>3642873</b></p>
+                                    <p>Order Date: <b>09-31-2018</b></p>
+                                    <p>Cartridge SKU: <b>1234567</b></p>
+                                    <p>Qty: <b>1</b></p>
+                                    <p>Total Price: <b>$14.99</b></p>
+                                </div>
+                            </div>
+
+                        </div>
                     </div>
                 </div>
             </div>
