table replacement mobile

--- a/my-printers.html
+++ b/my-printers.html
@@ -223,7 +223,7 @@
                                     <td>Printer Model</td>
                                     <td>Cartridge Name</td>
                                     <td>Cartridge SKU</td>
-                                    <td>Qty</td>
+                                    <td width="40px">Qty</td>
                                     <td>Total Price</td>
                                     <td>Tracking Number</td>
                                 </tr>
