--- a/my-printers.html
+++ b/my-printers.html
@@ -518,8 +518,7 @@
                                 <div class="col-sm-7 add-rem-ct">
                                     <a href="#" class="add-remove" id="addNewBilling">Add New</a>
                                     <a href="#" class="add-remove" id="removeBilling">Remove</a>
-                                    <a href="#" class="add-remove" id="resetBilling">Cancel</a>
-                                </div>
+                                 </div>
                             </div>
                 
                             <div class="row">
@@ -594,7 +593,7 @@
                             <div class="row">
                                 <div class="col-xs-6">
                                     <div class="form-group">
-                                        <label for="">Zip</label>       
+                                        <label for="" class="required">Zip</label>       
                                         <input type="text" class="form-control" required value="20018">
                                     </div>
                                 </div>
@@ -690,7 +689,6 @@
                                     <div class="col-sm-7 add-rem-ct">
                                         <a href="#" class="add-remove" id="addNewShipping">Add New</a>
                                         <a href="#" class="add-remove" id="removeShipping">Remove</a>
-                                        <a href="#" class="add-remove" id="resetShipping">Cancel</a>
                                     </div>
                                 </div>
                     
@@ -766,7 +764,7 @@
                                 <div class="row">
                                     <div class="col-xs-6">
                                         <div class="form-group">
-                                            <label for="">Zip</label>       
+                                            <label for="" class="required">Zip</label>       
                                             <input type="text" class="form-control" required value="98734">
                                         </div>
                                     </div>
@@ -782,8 +780,10 @@
                                     <div class="col-xs-4">
                                         <div class="form-group">
                                             <label for="">Phone</label>    
-                                            <select class="form-control">
-                                                <option value="">Home</option>
+                                            <select class="form-control" id="shippingPhone">
+                                                <option value="0">Choose</option>
+                                                <option value="cell" selected>Cell</option>
+                                                <option value="home">Home</option>
                                             </select>
                                         </div>
                                     </div>
