--- a/my-printers.html
+++ b/my-printers.html
@@ -231,7 +231,7 @@
                             </thead>
                             <tr>
                                 <td title="36428736487">36428736487</td>
-                                <td title="09-31-2018">09-31-2018</td>
+                                <td title="Sept 31, 2018">Sept 31, 2018</td>
                                 <td title="In Process">In Process</td>
                                 <td title="PIXMA TS9020">PIXMA TS9020</td>
                                 <td title="CLI-221 Black Ink Tank">CLI-221 Black Ink Tank</td>
@@ -242,7 +242,7 @@
                             </tr>
                             <tr>
                                 <td title="36428736487">36428736487</td>
-                                <td title="09-31-2018">09-31-2018</td>
+                                <td title="Sept 31, 2018">Sept 31, 2018</td>
                                 <td title="In Process">In Process</td>
                                 <td title="PIXMA TS9020">PIXMA TS9020</td>
                                 <td title="CLI-221 Black Ink Tank">CLI-221 Black Ink Tank</td>
@@ -253,7 +253,7 @@
                             </tr>
                             <tr>
                                 <td title="36428736487">36428736487</td>
-                                <td title="09-31-2018">09-31-2018</td>
+                                <td title="Sept 31, 2018">Sept 31, 2018</td>
                                 <td title="In Process">In Process</td>
                                 <td title="PIXMA TS9020">PIXMA TS9020</td>
                                 <td title="CLI-221 Black Ink Tank">CLI-221 Black Ink Tank</td>
@@ -264,7 +264,7 @@
                             </tr>
                             <tr>
                                 <td title="36428736487">36428736487</td>
-                                <td title="09-31-2018">09-31-2018</td>
+                                <td title="Sept 31, 2018">Sept 31, 2018</td>
                                 <td title="In Process">In Process</td>
                                 <td title="PIXMA TS9020">PIXMA TS9020</td>
                                 <td title="CLI-221 Black Ink Tank">CLI-221 Black Ink Tank</td>
@@ -296,7 +296,7 @@
                                 <div id="productOne" class="product-details collapse">
                                     <p>Tracking Number: <b><a href="https://m.usps.com/m/TrackConfirmAction" target="_new">39834453</a></b></p>
                                     <p>Order Number: <b>3642873</b></p>
-                                    <p>Order Date: <b>09-31-2018</b></p>
+                                    <p>Order Date: <b>Sept 31, 2018</b></p>
                                     <p>Cartridge SKU: <b>1234567</b></p>
                                     <p>Qty: <b>1</b></p>
                                     <p>Total Price: <b>$14.99</b></p>
@@ -319,7 +319,7 @@
                                 <div id="productTwo" class="product-details collapse">
                                     <p>Tracking Number: <b><a href="https://m.usps.com/m/TrackConfirmAction" target="_new">39834453</a></b></p>
                                     <p>Order Number: <b>3642873</b></p>
-                                    <p>Order Date: <b>09-31-2018</b></p>
+                                    <p>Order Date: <b>Sept 31, 2018</b></p>
                                     <p>Cartridge SKU: <b>1234567</b></p>
                                     <p>Qty: <b>1</b></p>
                                     <p>Total Price: <b>$14.99</b></p>
@@ -342,7 +342,7 @@
                                 <div id="productThree" class="product-details collapse">
                                     <p>Tracking Number: <b><a href="https://m.usps.com/m/TrackConfirmAction" target="_new">39834453</a></b></p>
                                     <p>Order Number: <b>3642873</b></p>
-                                    <p>Order Date: <b>09-31-2018</b></p>
+                                    <p>Order Date: <b>Sept 31, 2018</b></p>
                                     <p>Cartridge SKU: <b>1234567</b></p>
                                     <p>Qty: <b>1</b></p>
                                     <p>Total Price: <b>$14.99</b></p>
@@ -365,7 +365,7 @@
                                 <div id="productFour" class="product-details collapse">
                                     <p>Tracking Number: <b><a href="https://m.usps.com/m/TrackConfirmAction" target="_new">39834453</a></b></p>
                                     <p>Order Number: <b>3642873</b></p>
-                                    <p>Order Date: <b>09-31-2018</b></p>
+                                    <p>Order Date: <b>Sept 31, 2018</b></p>
                                     <p>Cartridge SKU: <b>1234567</b></p>
                                     <p>Qty: <b>1</b></p>
                                     <p>Total Price: <b>$14.99</b></p>
@@ -641,7 +641,7 @@
                 </article>
                 <div class="footer button-section">
                     <button class="button" onclick="closeModal()">Cancel</button>
-                    <button class="button alert" onclick="closeModal()">Save</button>
+                    <button class="button alert" type="submit">Save</button>
                 </div>
         </div>
     </div> <!-- / .manageBillingModal -->
@@ -814,7 +814,7 @@
             
             <div class="footer button-section">
                 <button class="button" onclick="closeModal()">Cancel</button>
-                <button class="button alert" onclick="closeModal()">Save</button>
+                <button class="button alert" type="submit">Save</button>
             </div>
         
         </div>
