--- a/New folder/my-printers.html
+++ b/New folder/my-printers.html
@@ -59,6 +59,11 @@
         
         <div class="list-item">
             <div class="row">
+                <div class="col-sm-3">
+                    <div class="img-ct">
+                        <img src="img/printer.jpg">
+                    </div>
+                </div>
                 <div class="col-sm-6">
                     <h2>PIXMA G3200</h2>
                     <ul class="product-actions">
@@ -191,10 +196,12 @@
             <div class="order-history">
 
                 <div class="row printer-single">
-                    <div class="col-xs-12">
+                    <div class="col-xs-4">
                         <div class="img-ct">
                             <img src="img/printer.jpg">
                         </div>
+                    </div>
+                    <div class="col-xs-8">
                         <h3>PIXMA G3200</h3>
                         <h6 class="serial">Serial Number: 4785634573</h6>
                     </div>
@@ -214,6 +221,7 @@
                                     <td>Order Number</td>
                                     <td>Order Date</td>
                                     <td>Status</td>
+                                    <td>Printer Model</td>
                                     <td>Cartridge Name</td>
                                     <td>Cartridge SKU</td>
                                     <td width="40px">Qty</td>
@@ -225,6 +233,7 @@
                                 <td title="36428736487">36428736487</td>
                                 <td title="Sept 31, 2018">Sept 31, 2018</td>
                                 <td title="In Process">In Process</td>
+                                <td title="PIXMA TS9020">PIXMA TS9020</td>
                                 <td title="CLI-221 Black Ink Tank">CLI-221 Black Ink Tank</td>
                                 <td title="27857836">27857836</td>
                                 <td title="1">1</td>
@@ -235,6 +244,7 @@
                                 <td title="36428736487">36428736487</td>
                                 <td title="Sept 31, 2018">Sept 31, 2018</td>
                                 <td title="In Process">In Process</td>
+                                <td title="PIXMA TS9020">PIXMA TS9020</td>
                                 <td title="CLI-221 Black Ink Tank">CLI-221 Black Ink Tank</td>
                                 <td title="27857836">27857836</td>
                                 <td title="1">1</td>
@@ -245,6 +255,7 @@
                                 <td title="36428736487">36428736487</td>
                                 <td title="Sept 31, 2018">Sept 31, 2018</td>
                                 <td title="In Process">In Process</td>
+                                <td title="PIXMA TS9020">PIXMA TS9020</td>
                                 <td title="CLI-221 Black Ink Tank">CLI-221 Black Ink Tank</td>
                                 <td title="27857836">27857836</td>
                                 <td title="1">1</td>
@@ -255,6 +266,7 @@
                                 <td title="36428736487">36428736487</td>
                                 <td title="Sept 31, 2018">Sept 31, 2018</td>
                                 <td title="In Process">In Process</td>
+                                <td title="PIXMA TS9020">PIXMA TS9020</td>
                                 <td title="CLI-221 Black Ink Tank">CLI-221 Black Ink Tank</td>
                                 <td title="27857836">27857836</td>
                                 <td title="1">1</td>
