--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
             </div>
             <div class="button-ct">
                 <a href="/" class="forgot-link">Forgot password?</a>
-                <button id="formSubmit" class="cbtn cbtn-canon-red">Sign In</button>
+                <button id="formSubmit" class="cbtn cbtn-canon-red" onclick="javascript:myPrinters()">Sign In</button>
             </div> 
         </div>
     </div>
+    <script>
+        function myPrinters() { window.location = 'my-printers.html'; }
+    </script>
     
     <footer>
         <div class="foot-content">
