--- a/my-printers.html
+++ b/my-printers.html
@@ -27,7 +27,7 @@
         <div class="logo"><h1>Canon Auto-Replenishment Printers</h1></div>
         <nav id="menu">
             <ul>
-                <li><a href="#"><i class="icon-user-circle-o"></i> Welcome, Peter</a></li>
+                <li><i class="icon-user-circle-o"></i> Welcome, Peter</li>
                 <li><a href="#">(Not You?)</a></li>
                 <li><a href="#">Sign Out</a></li>
                 <li><a href="#">Change Password</a></li>
@@ -59,25 +59,39 @@
         
         <div class="list-item">
             <div class="row">
+                <div class="col-sm-3">
+                    <div class="img-ct">
+                        <img src="img/printer.jpg">
+                    </div>
+                </div>
                 <div class="col-sm-6">
                     <h2>PIXMA G3200</h2>
-                    <ul class="product-actions">
-                        <li><a href="#" onclick="javascript:orderHistoryDialog()">Order history</a></li>
-                        <li><a href="#" onclick="javascript:manageBillingDialog()">Manage Billing</a></li>
-                        <li><a href="#" onclick="javascript:manageShippingDialog()">Manage Shipping</a></li>
-                    </ul>
+                    <span class="serial">Serial Number: 4785634573</span>
                 </div>
                 <div class="col-sm-3 rt-col-align">
                     <div class="status status__active">Active</div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3">&nbsp;</div>
-                <div class="col-sm-6">
-                    <span class="serial">Serial Number: 4785634573</span>
+                <div class="col-sm-9">
+                    <ul class="product-actions">
+                        <li><a href="#" onclick="javascript:orderHistoryDialog()">Order history</a></li>
+                        <li><a href="#" onclick="javascript:manageBillingDialog()">Manage Billing</a></li>
+                        <li><a href="#" onclick="javascript:manageShippingDialog()">Manage Shipping</a></li>
+                    </ul>
                 </div>
                 <div class="col-sm-3 text-right">
-                    <button class="button alert cancel" onclick="cancelServiceDialog()">Cancel Enrollment</button>
+                    <button class="button alert cancel margin-top-sm" onclick="cancelServiceDialog()">Cancel Enrollment</button>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm-12">
+                    <span class="activate-espot">Lorem ipsum dolor sit amet, 
+                        consectetur adipiscing elit. Integer nec odio. 
+                        Praesent libero. Sed cursus ante dapibus diam. 
+                        Sed nisi. Nulla quis sem at nibh elementum imperdiet.
+                        Duis sagittis ipsum. Praesent mauris.
+                    </span>
                 </div>
             </div>
         </div>
@@ -92,28 +106,26 @@
                 </div>
                 <div class="col-sm-6">
                     <h2>PIXMA G3200</h2>
-                    <ul class="product-actions">
-                        <li><a href="#" onclick="javascript:orderHistoryDialog()">Order history</a></li>
-                        <li><a href="#" onclick="javascript:manageBillingDialog()">Manage Billing</a></li>
-                        <li><a href="#" onclick="javascript:manageShippingDialog()">Manage Shipping</a></li>
-                    </ul>
+                    <span class="serial">Serial Number: 4785634573</span>
                 </div>
                 <div class="col-sm-3 rt-col-align">
                     <div class="status status__ready">Ready To Activate</div>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3">&nbsp;</div>
-                <div class="col-sm-6">
-                    <span class="serial">Serial Number: 4785634573</span>
+                <div class="col-sm-9">
+                    <ul class="product-actions">
+                        <li><a href="#" onclick="javascript:orderHistoryDialog()">Order history</a></li>
+                        <li><a href="#" onclick="javascript:manageBillingDialog()">Manage Billing</a></li>
+                        <li><a href="#" onclick="javascript:manageShippingDialog()">Manage Shipping</a></li>
+                    </ul>
                 </div>
                 <div class="col-sm-3 text-right">
                     <a href="https://shop.usa.canon.com/shop/en/catalog" target="_new" class="instructions">Activation Instructions</a>
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-3">&nbsp;</div>
-                <div class="col-sm-9">
+                <div class="col-sm-12">
                     <span class="activate-espot">Lorem ipsum dolor sit amet, 
                         consectetur adipiscing elit. Integer nec odio. 
                         Praesent libero. Sed cursus ante dapibus diam. 
@@ -134,22 +146,31 @@
                     </div>
                     <div class="col-sm-6">
                         <h2>PIXMA G3200</h2>
-                        <ul class="product-actions">
-                            <li><a href="#" onclick="javascript:orderHistoryDialog()">Order history</a></li>
-                            <li><a href="#" onclick="javascript:manageBillingDialog()">Manage Billing</a></li>
-                            <li><a href="#" onclick="javascript:manageShippingDialog()">Manage Shipping</a></li>
-                        </ul>
+                        <span class="serial no-sibling">Serial Number: 4785634573</span>
                     </div>
                     <div class="col-sm-3 rt-col-align">
                         <div class="status status__cancelled">Cancelled</div>
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-sm-3">&nbsp;</div>
-                    <div class="col-sm-6">
-                        <span class="serial no-sibling">Serial Number: 4785634573</span>
+                    <div class="col-sm-9">
+                        <ul class="product-actions">
+                            <li><a href="#" onclick="javascript:orderHistoryDialog()">Order history</a></li>
+                            <li><a href="#" onclick="javascript:manageBillingDialog()">Manage Billing</a></li>
+                            <li><a href="#" onclick="javascript:manageShippingDialog()">Manage Shipping</a></li>
+                        </ul>
                     </div>
                     <div class="col-sm-3">&nbsp;</div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-12">
+                        <span class="activate-espot">Lorem ipsum dolor sit amet, 
+                            consectetur adipiscing elit. Integer nec odio. 
+                            Praesent libero. Sed cursus ante dapibus diam. 
+                            Sed nisi. Nulla quis sem at nibh elementum imperdiet.
+                            Duis sagittis ipsum. Praesent mauris.
+                        </span>
+                    </div>
                 </div>
             </div>
 
@@ -206,7 +227,7 @@
                     </div>
                 </div>
 
-                <div class="full-table-data">
+                 <div class="full-table-data">
                     <div class="row">
                         <table>
                             <thead>
@@ -264,6 +285,8 @@
                         </table>
                     </div>
                 </div>
+
+
                 <div class="mobile-table-data">
                     <div class="row">
                         <div class="col-sm-12">
@@ -402,7 +425,7 @@
                                     </div>
                                     <div for="pay_by_visa_1" class="current-card__cc-img">
                                         <label for="pay_by_visa_1">
-                                            <img class="img-responsive" alt="VISA - Credit or Debit Cards" src="../img/VISA.jpg">
+                                            <img class="img-responsive" alt="VISA - Credit or Debit Cards" src="img/VISA.jpg">
                                         </label>
                                     </div>
                                     <div class="current-card__radio">
@@ -410,7 +433,7 @@
                                     </div>
                                     <div class="current-card__cc-img">
                                         <label for="pay_by_mc_1">
-                                            <img class="img-responsive" alt="MASTER CARD - Credit or Debit Cards" src="../img/MC.png">
+                                            <img class="img-responsive" alt="MASTER CARD - Credit or Debit Cards" src="img/MC.png">
                                         </label>
                                     </div>
                                     <div class="current-card__radio">
@@ -418,7 +441,7 @@
                                     </div>
                                     <div class="current-card__cc-img">
                                         <label for="pay_by_amex_1">
-                                            <img class="img-responsive" alt="AMERICAN EXPRESS - Credit or Debit Cards" src="../img/AXP.jpg">
+                                            <img class="img-responsive" alt="AMERICAN EXPRESS - Credit or Debit Cards" src="img/AXP.jpg">
                                         </label>
                                     </div>
                                     <div class="current-card__radio">
@@ -426,7 +449,7 @@
                                     </div>
                                     <div class="current-card__cc-img">
                                         <label for="pay_by_disc_1">
-                                            <img class="img-responsive" alt="DISCOVER - Credit or Debit Cards" src="../img/DISC.jpg">
+                                            <img class="img-responsive" alt="DISCOVER - Credit or Debit Cards" src="img/DISC.jpg">
                                         </label>
                                     </div>
                                 </div>
